# OpenGLEngine-CPP

./: .gitignore  CMakeLists.txt  main.cpp
src/: stdopengl.h
src/main/: define.h
src/main/common/: camera.h  object.h  window.h
src/main/component/: direction_light.h  filter.h  light.h  material.h  mesh.h  point_light.h  renderer.h  spot_light.h  transform.h
src/main/preset/: create.h
src/main/shader/: basic.fs  basic.vs
src/main/shader/environmentMapping/: reflection.fs  refraction.fs
src/main/shader/model/: model.fs  model.vs
src/main/shader/skybox/: skybox.vs
src/main/stb/: stb_image.h
